--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="selected-lines"></div>
 
     <script>
-        const FILE_PATHS = ["file1.txt", "file2.txt", "file3.txt", "file4.txt", "file5.txt", "file6.txt", "file7.txt"];
+        const FILE_PATHS = ["lugares.txt"];
 
         function readLinesFromFile(file) {
             const request = new XMLHttpRequest();
