--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
             let selectedLines = [];
             for (let i = 0; i < numLines; i++) {
                 const randomIndex = Math.floor(Math.random() * lines.length);
-                selectedLines.push(lines[randomIndex]);
+                const selectedLine = lines[randomIndex];
+                selectedLines.push(selectedLine);
+                lines.splice(randomIndex, 1);
             }
             return selectedLines;
         }
+
 
         function showSelectedLines() {
             const selectedLines = selectRandomLines();
