--- a/index.html
+++ b/index.html
@@ -8,65 +8,32 @@
 
 <body>
     <form>
-        <label for="input">Ingrese un número entero menor o igual a:</label>
-        <input type="number" id="input" name="input" min="0" max="`totalLines`" step="1" onfocus="setPlaceholder()">
+        <label for="howManyLines">Ingrese un número entero menor o igual a:</label>
+        <input type="number" id="InputHowManyLines" name="input" min="0" max="`totalLines`" step="1"
+            onfocus="setPlaceholder()">
         <button type="button" onclick="showSelectedLines()">Seleccionar líneas aleatorias</button>
     </form>
 
     <div id="selected-lines"></div>
 
     <script>
-        const FILE_PATHS = ["lugares.txt"];
+        function contar_lineas(rutas_archivos) {
+            let total_lineas = 0;
+            let lineas = [];
 
-        function readLinesFromFile(file) {
-            const request = new XMLHttpRequest();
-            request.open("GET", file, false);
-            request.send();
-            const text = request.responseText;
-            const lines = text.split("\n");
-            return lines;
-        }
+            for (let i = 0; i < rutas_archivos.length; i++) {
+                const fr = new FileReader();
+                fr.readAsText(rutas_archivos[i]);
 
-        function setPlaceholder() {
-            let totalLines = 0;
-            for (let i = 0; i < FILE_PATHS.length; i++) {
-                const fileLines = readLinesFromFile(FILE_PATHS[i]);
-                totalLines += fileLines.length;
+                fr.onload = function () {
+                    const contenido = fr.result;
+                    lineas.concat(contenido.split("\n"));
+                };
             }
-            const input = document.getElementById("input");
-            input.placeholder = "Ingrese un número entero menor o igual a " + totalLines;
-        }
-
-        function selectRandomLines() {
-            const input = document.getElementById("input");
-            const numLines = parseInt(input.value);
-            let lines = [];
-            for (let i = 0; i < FILE_PATHS.length; i++) {
-                const fileLines = readLinesFromFile(FILE_PATHS[i]);
-                for (let j = 0; j < fileLines.length; j++) {
-                    lines.push(fileLines[j] + "\n");
-                }
-            }
-            let selectedLines = [];
-            for (let i = 0; i < numLines; i++) {
-                const randomIndex = Math.floor(Math.random() * lines.length);
-                const selectedLine = lines[randomIndex];
-                selectedLines.push(selectedLine);
-                lines.splice(randomIndex, 1);
-            }
-            return selectedLines;
-        }
-
-
-        function showSelectedLines() {
-            const selectedLines = selectRandomLines();
-            const div = document.getElementById("selected-lines");
-            div.innerHTML = selectedLines.join("<br>");
-            div.addEventListener("click", function () {
-                const text = selectedLines.join("\n");
-                navigator.clipboard.writeText(text);
-                alert("Las líneas seleccionadas se han copiado al portapapeles.");
-            });
+            console.table(lines);
+            
+            total_lineas = lineas.length;
+            return total_lineas;
         }
     </script>
 </body>
